package com.template.config.security;

public enum SecurityMode {
    KEYCLOAK_OPAQUE,
    KEYCLOAK_JWT,
    API_KEY
}
